# Microsoft-clarity-agent

./: .env.sample  .gitattributes  .gitignore  AGENTS.md  AIFAQ.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  SUPPORT.md  UPDATE-CHECKLIST.md  clarity-server.spec  clarity.py  pyproject.toml
.clarity-protocol/: config.json  messaging.md  notes.md  observations.md  summary.md
.clarity-protocol/decisions/: decision-01-product-priority.md  decisions.md
.clarity-protocol/drafts/: integration-strategy.md
.clarity-protocol/failures/: failure-01-user-disengagement.md  failure-02-inadequate-ai-thinking.md  failure-03-false-alignment.md  failure-04-failure-analysis-depth.md  failure-05-organizational-misuse.md  failure-06-multi-expression-drift.md  failure-07-operational-risks.md  failures.md
.clarity-protocol/goal/: open-questions.md  problem.md  requirements.md  resolved-questions.md  stakeholders.md
.clarity-protocol/solution/: architecture.md  solution-summary.md  solution.md
.github/acl/: access.yml
.github/compliance/: inventory.yml
.github/workflows/: ci.yml  evals.yml  release.yml
catalogs/: security-catalog.csv
dev-tools/: README.md  refresh-catalog.py  requirements.txt  setup-feedback-infra.py  test.sh
evals/: README.md  config.sample.yaml  conftest.py
evals/framework/: __init__.py  config.py  judge.py  report.py  resume.py  runner.py  target.py  types.py  user.py  user_behavior.py  user_behavior_fictional_character.py  user_behavior_thriller_novel.py
mcp-server/: README.md  package.json
processes/: README.md  architecture-design.md  clarity-agent.md  decision-guidance.md  discovery-prototype.md  discovery-research.md  failure-analysis.md  failure-brainstorming.md  failure-management.md  failure-reasoning-guidelines.md  message-clarification.md  problem-clarification.md  solution-brainstorming.md
scripts/: bump-version.py  dev-app.sh  install.ps1  install.sh
src/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/loading/: index.html
src-tauri/permissions/: open-panel-window.toml
src-tauri/src/: main.rs
tests/: conftest.py  test_agent_dir.py  test_brainstorm_tools.py  test_chat_with_tools.py  test_copilot_compaction_detection.py  test_create_app_ensure_hook.py  test_decisions.py  test_desktop.py  test_doctor.py  test_eval_na_verdict.py  test_eval_report_links.py  test_eval_resume.py  test_eval_runner.py  test_eval_smoke_check.py  test_eval_user.py  test_eval_user_behavior_fictional_character.py  test_eval_user_behavior_thriller_novel.py  test_failure_state.py  test_feedback.py  test_github_copilot.py  test_init_protocol.py  test_installer.py  test_launcher.py  test_launcher_create_project_endpoint.py  test_layout.py  test_llm.py  test_mailbox.py  test_mcp_server.py  test_packet.py  test_packet_status.py  test_project.py  test_project_embed.py  test_projects.py  test_registry_sync.py  test_release_feed.py  test_sdk_compaction_detection.py  test_session_transcript_writes.py  test_settings.py  test_setup_userspace.py  test_snippet.py  (+10 more)
thinkers/: adversarial-analysis-thinker.md  codebase-scanner-thinker.md  general-thinker.md  human-factors-thinker.md  security-catalog-thinker.md  security-thinker.md
vscode-extension/: .gitignore  .vscodeignore  README.md  bundle.js  clarity-agent-1.0.0.vsix  esbuild.js  package-lock.json  package.json  tsconfig.json
web/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
(+689 files in other folders)
