[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clarity-agent"
version = "0.1.1"
requires-python = ">=3.10"
description = "Implementation library for the clarity protocol framework"
dependencies = [
  "prompt-toolkit>=3.0",
  "keyring>=25.0",
  "pyyaml>=6.0",
  # LLM providers — all included so any provider works out of the box.
  "anthropic>=0.39.0",
  "openai>=1.0.0",
  "google-genai>=1.0",
  "azure-ai-inference>=1.0.0b9",
  "azure-identity>=1.14.0",
  "aiohttp>=3.9.0",
  "github-copilot-sdk>=0.1.0",
  # Document generation.
  "python-docx>=1.1",
  "mistune>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/clarity_agent"]

[tool.hatch.build.targets.wheel.force-include]
"processes" = "clarity_agent/_data/processes"
"thinkers" = "clarity_agent/_data/thinkers"
"catalogs" = "clarity_agent/_data/catalogs"
"AGENTS.md" = "clarity_agent/_data/AGENTS.md"

[project.optional-dependencies]
web = ["fastapi>=0.104.0", "uvicorn[standard]>=0.24.0", "websockets>=12.0", "httpx>=0.27.0"]
cli = ["python-dotenv>=1.0.0", "claude-agent-sdk>=0.1.0"]
mcp = ["mcp>=1.0", "pydantic-settings>=2.0"]
dev = [
  "clarity-agent[cli,web,mcp]",
  "pytest>=9.0.3",
  "ruff>=0.4",
  "pyright>=1.1",
  "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "advisory: a test whose failure is informative but should not block the suite (rendered as 💡 in summary.md; does not contribute to pytest exit code)",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "dev-tools"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort (import ordering)
  "UP",  # pyupgrade (modern Python idioms)
  "B",   # flake8-bugbear (common gotchas)
]
ignore = [
  "E501", # line-too-long — enforced by formatter, not linter
  "B027", # empty-method-without-abstract-decorator — too strict for protocol stubs
]

[tool.ruff.lint.per-file-ignores]
# Dev scripts use late imports and standalone patterns.
"dev-tools/*" = ["E402"]

[tool.pyright]
extraPaths = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
# Files with heavy third-party SDK types that pyright can't resolve
# without installed stubs. Suppress until stubs are available.
ignore = [
  "src/clarity_agent/packet/docx_style.py",
  "src/clarity_agent/packet/docx.py",
  "src/clarity_agent/llm/impl/azure_inference.py",
  "src/clarity_agent/llm/impl/github_copilot.py",
]
